<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/name_and_date_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginNameAndDate"
            android:text="@string/name_and_date_string"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            style="@style/editTextStyle"
            android:layout_width="@dimen/layoutWidthEditText"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginScreenTop"
            android:hint="@string/full_name_string"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/birth_date"
            android:layout_width="@dimen/layoutWidthEditText"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:focusable="false"
            android:hint="@string/birth_date_string"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name" />

        <EditText
            android:id="@+id/occupation"
            style="@style/editTextStyle"
            android:layout_width="@dimen/layoutWidthEditText"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:hint="@string/occupation_string"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/birth_date" />

        <EditText
            android:id="@+id/description"
            style="@style/editTextStyle"
            android:layout_width="@dimen/layoutWidthEditText"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/marginTopEditText"
            android:gravity="top|left"
            android:lines="5"
            android:maxLines="5"
            android:hint="@string/description_string"
            android:imeOptions="actionDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/occupation" />

        <Button
            android:id="@+id/sign_up_button"
            android:backgroundTint="@color/teal_700"
            android:layout_width="@dimen/layoutWidthButton"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttonMarginTop"
            android:onClick="signUpButtonHandler"
            android:text="@string/sign_up_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/description"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>